# buildnet3d

./: .gitignore  pyproject.toml
buildnet3d/data/: buildnet_dataparser.py  buildnet_dataset.py
buildnet3d/models/: method_configs.py  semantic_sdf.py  semantic_sdf_field.py
buildnet3d/scripts/: reconstruct.py
